--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.HomeFragment" >
+    tools:context=".view.HomeFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/dailyMealCardView"
@@ -40,6 +40,16 @@
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="bold|italic" />
+
+        <ImageView
+            android:id="@+id/favoriteImageIcon"
+            android:layout_width="50dp"
+            android:layout_height="37dp"
+            android:layout_gravity="bottom|right"
+            android:paddingRight="10sp"
+            android:src="@drawable/favoriteicon"
+            app:tint="@color/design_default_color_secondary_variant" />
+
     </androidx.cardview.widget.CardView>
 
     <TextView
@@ -54,10 +64,22 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/categoryRecycler"
-        android:layout_width="409dp"
-        android:layout_height="465dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dailyMealCardView" />
+
+    <TextView
+        android:id="@+id/avilableCategoriesText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="15dp"
+        android:text="@string/avilableCategory"
+        android:textSize="20dp"
+        android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dailyMealCardView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
