--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,85 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.HomeFragment">
+    android:layout_height="match_parent">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/dailyMealCardView"
-        android:layout_width="365dp"
-        android:layout_height="207dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dailyMealText">
-
-        <ImageView
-            android:id="@+id/dailyMealImage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_launcher_background" />
-
-        <View
-            android:id="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="50sp"
-            android:layout_gravity="bottom"
-            android:background="#4D070505" />
-
-        <TextView
-            android:id="@+id/dailyMealName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:padding="10sp"
-            android:text="@string/dailyMeal"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp"
-            android:textStyle="bold|italic" />
-
-        <ImageView
-            android:id="@+id/favoriteImageIcon"
-            android:layout_width="50dp"
-            android:layout_height="37dp"
-            android:layout_gravity="bottom|right"
-            android:paddingRight="10sp"
-            android:src="@drawable/favoriteicon"
-            app:tint="@color/design_default_color_secondary_variant" />
-
-    </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:id="@+id/dailyMealText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/dailyMealText"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/dailyMealCardView"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/categoryRecycler"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dailyMealCardView" />
+        tools:context=".view.HomeFragment">
 
-    <TextView
-        android:id="@+id/avilableCategoriesText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="15dp"
-        android:text="@string/avilableCategory"
-        android:textSize="20dp"
-        android:textStyle="bold|italic"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dailyMealCardView" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/dailyMealCardView"
+            android:layout_width="365dp"
+            android:layout_height="207dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dailyMealText">
+
+            <ImageView
+                android:id="@+id/dailyMealImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_launcher_background" />
+
+            <View
+                android:id="@+id/view"
+                android:layout_width="match_parent"
+                android:layout_height="50sp"
+                android:layout_gravity="bottom"
+                android:background="#4D070505" />
+
+            <TextView
+                android:id="@+id/dailyMealName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:padding="10sp"
+                android:text="@string/dailyMeal"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="bold|italic" />
+
+            <ImageView
+                android:id="@+id/favoriteImageIcon"
+                android:layout_width="50dp"
+                android:layout_height="37dp"
+                android:layout_gravity="bottom|right"
+                android:paddingRight="10sp"
+                android:src="@drawable/favoriteicon"
+                app:tint="@color/design_default_color_secondary_variant" />
+
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/dailyMealText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/dailyMealText"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="@+id/dailyMealCardView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- First RecyclerView -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/categoryRecycler1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="40dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dailyMealCardView" />
+
+        <TextView
+            android:id="@+id/avilableIngredians"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/avilable_ingredient"
+            android:textSize="20dp"
+            android:textStyle="bold|italic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/categoryRecycler1" />
+
+        <!-- Second RecyclerView -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/ingredientsRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/avilableIngredians" />
+
+        <TextView
+            android:id="@+id/avilableCountriesText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/avilable_Countries"
+            android:textSize="20dp"
+            android:textStyle="bold|italic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ingredientsRecycler" />
+
+        <!-- Third RecyclerView -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/countriesRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/avilableCountriesText" />
+
+        <TextView
+            android:id="@+id/avilableCategoriyText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/avilableCategory"
+            android:textSize="20dp"
+            android:textStyle="bold|italic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dailyMealCardView" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
