creating ingrideantPresenter and Adapter also Contract and Contract for presenter

--- a/app/src/main/res/layout/categroy_row.xml
+++ b/app/src/main/res/layout/categroy_row.xml
@@ -6,11 +6,16 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp"
-    app:cardElevation="4dp">
+    app:cardElevation="4dp"
+    android:background="@android:color/transparent"> <!-- Add this line -->
+
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"> <!-- Add this line -->
+
         android:padding="16dp">
 
         <!-- Your content here (e.g., ImageView, TextView) -->
@@ -25,7 +30,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/categoryField"
+            android:id="@+id/categoryName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="112dp"
