--- a/app/src/main/res/layout/fragment_sign_up_fragment.xml
+++ b/app/src/main/res/layout/fragment_sign_up_fragment.xml
@@ -11,8 +11,9 @@
     <!-- Profile Image Positioned Below Edit Button -->
 
     <!-- Username Input Layout -->
+
     <ImageButton
-        android:id="@+id/ib_edit"
+        android:id="@+id/edit_signUpImageButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginEnd="16dp"
