--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -10,14 +10,18 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/homeFragmentContainer"
         android:name="com.example.foodplanneritiandroidjava.view.HomeFragment"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/nav_button"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/nav_button" />
+        />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        app:layout_constraintTop_toBottomOf="@id/homeFragmentContainer"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:menu="@menu/button_bar_menu"
+        android:id="@+id/nav_button"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
