--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".view.HomeFragment">
+        tools:context=".view.home.HomeFragment">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/dailyMealCardView"
