--- a/app/src/main/res/layout/fragment_splash_fragment.xml
+++ b/app/src/main/res/layout/fragment_splash_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".splash_fragment">
+    tools:context=".view.login_signUp.splash_fragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
