--- a/app/src/main/res/navigation/nav_button.xml
+++ b/app/src/main/res/navigation/nav_button.xml
@@ -7,21 +7,21 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.foodplanneritiandroidjava.view.HomeFragment"
+        android:name="com.example.foodplanneritiandroidjava.view.home.HomeFragment"
         android:label="HomeFragment" />
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.example.foodplanneritiandroidjava.SearchFragment"
+        android:name="com.example.foodplanneritiandroidjava.view.search.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
     <fragment
         android:id="@+id/favoriteFragment"
-        android:name="com.example.foodplanneritiandroidjava.FavoriteFragment"
+        android:name="com.example.foodplanneritiandroidjava.view.favorite.FavoriteFragment"
         android:label="fragment_favorite"
         tools:layout="@layout/fragment_favorite" />
     <fragment
         android:id="@+id/plansFragment"
-        android:name="com.example.foodplanneritiandroidjava.PlansFragment"
+        android:name="com.example.foodplanneritiandroidjava.view.plans.PlansFragment"
         android:label="fragment_plans"
         tools:layout="@layout/fragment_plans" />
 </navigation>
