--- a/app/src/main/res/layout/categroy_row.xml
+++ b/app/src/main/res/layout/categroy_row.xml
@@ -5,16 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp"
-    android:background="@android:color/transparent"> <!-- Add this line -->
+    android:background="@android:color/transparent"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="10dp"
+    app:cardUseCompatPadding="true"> <!-- Add this line -->
 
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"> <!-- Add this line -->
+        android:background="@android:color/transparent"
+        android:padding="16dp"
+        tools:ignore="ExtraText"> <!-- Add this line -->
 
         android:padding="16dp">
 
