--- a/app/src/main/res/layout/meal_row.xml
+++ b/app/src/main/res/layout/meal_row.xml
@@ -80,12 +80,12 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="right"
-            android:layout_marginStart="37dp"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="5dp"
             android:paddingRight="10sp"
             android:src="@drawable/favoriteicon"
-            app:layout_constraintStart_toEndOf="@+id/meal_name"
-            app:layout_constraintTop_toBottomOf="@+id/meal_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:tint="@color/design_default_color_secondary_variant" />
 
         <ImageView
@@ -93,12 +93,12 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="right"
-            android:layout_marginStart="156dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
             android:paddingRight="10sp"
             android:src="@drawable/calendertoday"
-            app:layout_constraintStart_toEndOf="@+id/meal_name"
-            app:layout_constraintTop_toBottomOf="@+id/meal_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/add_favorite_image_icon"
             app:tint="@color/design_default_color_secondary_variant" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
