--- a/app/src/main/res/navigation/nav_button.xml
+++ b/app/src/main/res/navigation/nav_button.xml
@@ -8,7 +8,11 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.foodplanneritiandroidjava.view.home.HomeFragment"
-        android:label="HomeFragment" />
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_mealFragment"
+            app:destination="@id/mealFragment" />
+    </fragment>
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.example.foodplanneritiandroidjava.view.search.SearchFragment"
@@ -24,4 +28,18 @@
         android:name="com.example.foodplanneritiandroidjava.view.plans.PlansFragment"
         android:label="fragment_plans"
         tools:layout="@layout/fragment_plans" />
+    <fragment
+        android:id="@+id/mealFragment"
+        android:name="com.example.foodplanneritiandroidjava.view.meal.MealFragment"
+        android:label="fragment_meal"
+        tools:layout="@layout/fragment_meal" >
+        <argument
+            android:name="mealType"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="mealSourceType"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
 </navigation>
