--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="selected_chip_color">#9BBA52</color> <!-- Example color for selected state -->
+    <color name="default_chip_color">#BDBDBD</color> <!-- Example color for default state -->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#1E8A04</color>
 </resources>
