--- a/app/src/main/res/layout/categroy_row.xml
+++ b/app/src/main/res/layout/categroy_row.xml
@@ -1,12 +1,12 @@
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/category_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_margin="10dp"
     android:background="@android:color/transparent"
-    app:cardCornerRadius="10dp"
+    app:cardCornerRadius="20dp"
     app:cardElevation="10dp"
     app:cardUseCompatPadding="true"> <!-- Add this line -->
 
@@ -38,11 +38,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="112dp"
             android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif-medium"
             android:text="@string/categoryField"
-            android:textSize="18sp"
-            android:textStyle="bold"
+            android:textSize="20sp"
+            android:textStyle="bold|italic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/categoryImage" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
