--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/splash_fragment"
-        android:name="com.example.foodplanneritiandroidjava.view.login_signUp.splash_fragment"
+        android:name="com.example.foodplanneritiandroidjava.view.login_signUp.SplashFragment"
         android:label="fragment_splash_fragment"
-        tools:layout="@layout/fragment_splash_fragment" >
+        tools:layout="@layout/splash_fragment" >
         <action
             android:id="@+id/action_splash_fragment_to_login_fragment"
             app:destination="@id/login_fragment"
