--- a/app/src/main/res/layout/fragment_meal_detail.xml
+++ b/app/src/main/res/layout/fragment_meal_detail.xml
@@ -3,121 +3,107 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/meal_cardView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:elevation="2dp"
-        app:cardCornerRadius="10dp"
+        android:layout_margin="10dp"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginVertical="8dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="8dp"
+        app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeWidth="1dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/meal_image"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:elevation="2dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_launcher_background"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:riv_corner_radius="10dp"
-                tools:ignore="MissingClass" />
+            android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/plan_iconImage"
+                android:id="@+id/meal_image"
+                android:layout_width="match_parent"
+                android:layout_height="170dp"
+                android:adjustViewBounds="true"
+                android:contentDescription="@null"
+                android:foreground="#30000000"
+                android:scaleType="fitXY"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/meal_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="20dp"
+                android:layout_marginStart="28dp"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:lines="1"
+                android:textAppearance="?attr/textAppearanceHeadline6"
+                android:textSize="20sp"
+                android:textStyle="bold|italic"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/meal_image"
+                tools:text="Meal Name" />
+
+            <TextView
+                android:id="@+id/meal_category_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="16dp"
+                android:text="@string/mealCategoryName"
+                android:textColor="#EAE7E7"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="@id/meal_image"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/meal_country_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:text="@string/mealCountryName"
+                android:textColor="#EAEAEA"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="@id/meal_category_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/meal_category_name" />
+
+            <ImageView
+                android:id="@+id/add_favorite_image_icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:src="@drawable/calendertoday"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/favorite_iconImage" />
-
-            <ImageView
-                android:id="@+id/favorite_iconImage"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="44dp"
-                android:layout_marginEnd="16dp"
-                android:backgroundTint="#00BCD4"
+                android:layout_marginEnd="5dp"
+                android:paddingRight="10sp"
                 android:src="@drawable/favoriteicon"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/design_default_color_secondary_variant" />
+
+            <ImageView
+                android:id="@+id/addTo_plan_image_icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
+                android:paddingRight="10sp"
+                android:src="@drawable/calendertoday"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/add_favorite_image_icon"
+                app:tint="@color/design_default_color_secondary_variant" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
-
-    <View
-        android:id="@+id/gradient_overlay"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:background="@drawable/gradient_overlay"
-        app:layout_constraintBottom_toBottomOf="@+id/meal_cardView"
-        app:layout_constraintEnd_toEndOf="@+id/meal_cardView"
-        app:layout_constraintStart_toStartOf="@+id/meal_cardView"
-        app:layout_constraintTop_toTopOf="@id/meal_details_name"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/meal_details_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginBottom="8dp"
-        android:drawablePadding="12dp"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:shadowColor="@color/white"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="100"
-        android:textColor="@color/white"
-        android:textSize="26sp"
-        android:textStyle="bold"
-        app:drawableStartCompat="@drawable/ic_name_white"
-        app:layout_constraintBottom_toTopOf="@id/meals_details_category"
-        app:layout_constraintStart_toStartOf="@id/meal_cardView"
-        tools:text="@string/mealName" />
-
-    <TextView
-        android:id="@+id/meals_details_category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="8dp"
-        android:drawablePadding="12dp"
-        android:text="@string/mealCategoryName"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:drawableStartCompat="@drawable/ic_category_white"
-        app:layout_constraintBottom_toBottomOf="@id/meal_cardView"
-        app:layout_constraintEnd_toStartOf="@id/meal_detail_country"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/meal_detail_country"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawablePadding="12dp"
-        android:text="@string/mealCountryName"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:drawableStartCompat="@drawable/ic_country_white"
-        app:layout_constraintBottom_toBottomOf="@id/meals_details_category"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/meals_details_category"
-        app:layout_constraintTop_toTopOf="@id/meals_details_category" />
+    </com.google.android.material.card.MaterialCardView>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
@@ -125,12 +111,12 @@
         android:layout_height="0dp"
         android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_constraintTop_toBottomOf="@id/meals_details_category"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/meal_cardView">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/mealDetailIngrediantText"
@@ -155,41 +141,38 @@
                 app:layout_constraintTop_toBottomOf="@+id/mealDetailIngrediantText" />
 
             <TextView
-                android:id="@+id/instructionText"
-                android:layout_width="match_parent"
+                android:id="@+id/meal_instructionText"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:drawablePadding="10dp"
-                android:padding="10dp"
-                android:text="@string/instruction"
-                android:textColor="@color/black"
+                android:layout_marginStart="18dp"
+                android:text="@string/mealSteps"
                 android:textSize="20sp"
-                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ingrediant_detail_recycler" />
+                app:layout_constraintTop_toBottomOf="@id/ingrediant_detail_recycler" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/instruction_recyclerView"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/mealsStepsField"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="3dp"
+                android:layout_marginStart="18dp"
+                android:text="@string/mealSteps"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/meal_instructionText"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/instructionText" />
+                tools:layout_editor_absoluteY="352dp" />
 
-            <!-- Add VideoView below the instruction recyclerView -->
             <VideoView
                 android:id="@+id/meal_videoView"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="189dp"
                 android:layout_marginEnd="10dp"
                 android:padding="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/instruction_recyclerView" />
+                app:layout_constraintTop_toBottomOf="@+id/mealsStepsField" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
